# local-mysql-reporter

./: .env  .gitignore  README.md  data_req.xlsx  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
demo-tauri/docs/: drop_reports_tables.sql  import_coach_202603.sql  import_expense_202604.sql  import_expense_income_202603.sql  schema_coach.sql  schema_daily_ledger.sql  schema_global_setting.sql  schema_member.sql  schema_routine.sql  技术方案.md
demo-tauri/docs/导入模板/: 11_trial_class_体验课.xlsx  12_coach_leave_请假记录.xlsx
demo-tauri/docs/数据库脚本/: sp_load_data.sql
demo-tauri/src/: member-ui.ts  overview-ui.ts
demo-tauri/src-tauri/: tauri.conf.json
demo-tauri/src-tauri/src/: coach.rs  file_export.rs  import_data.rs  ledger.rs  (+2 more)
docs/: data_init.sql  fix_ledger_month.sql  import_income_202604.sql  schema_coach_salary.sql  schema_import_tables.sql  schema_salary_structure.sql  客户使用教程.md  接口文档.md  项目沟通会.pptx
docs/scripts/: before-dev.cjs  create-ppt.cjs  create_templates.py
docs/导入模板/: 01_member_会员表.xlsx  02_coach_教练表.xlsx  03_course_课程表.xlsx  04_booking_约课记录表.xlsx  05_coach_fee_课时费记录表.xlsx  09_teaching_diary_授课日记.xlsx  10_daily_expense_日常开支.xlsx  13_import_member_导入会员名册.xlsx  14_import_booking_导入约课记录.xlsx
docs/数据库脚本/: drop_all.sql  schema_all.sql
src/: coach-stats-ui.ts  coach-ui.ts  export-xlsx.ts  invoke.ts  ledger-ui.ts  main.ts  reports-ui.ts  routine-ui.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  member.rs  reports.rs  tabular_import.rs
