[package]
name = "demo-tauri"
version = "0.1.0"
description = "local-mysql-reporter demo (Tauri)"
authors = ["you"]
edition = "2021"

[lib]
name = "demo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
mysql = "24"
csv = "1.3"
calamine = "0.26"
rfd = "0.15"
